--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,95 @@
-body{
-	background-color: #CBE0EB;
+*{
+	margin:0;
+	padding: 0;
+}
+
+.container{
+	padding: 10px 0;
+	margin: auto;
+	width: 900px;
+}
+
+.header{
+	background-image: url('../img/coding.jpg');
+	background-size: cover;
+	background-attachment: fixed;
+	height: 600px;
+}
+
+.header h1{
+	color: white;
+	font-size: 60px;
+	padding-top: 130px;
+	text-align: center;
+}
+
+.header p{
+	color: white;
+	font-size: 40px;
+	text-align: center;
+}
+
+
+.menu{
+	background-color: #0f4c75;
+	color: black;
+	font-size: 25px;
+	font-family: helvetica;
+	height: 50px;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+}
+
+.menu ul li{
+	display: inline;
+	padding: 0 10px;
+	margin: 5px;
+}
+
+.menu ul li a{
+	color: white;
+	text-decoration: none;
+}
+
+.sobreMi{
+	background-color: #00b7c2;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 660px;
+}
+
+.sobreMi h2{
+	color: white;
+	font-size: 35px;
+	text-align: center;
+	margin-bottom: 40px;
+}
+
+.sobreMi img{
+	border-radius: 50%;
+	width: 300px;
+	float: right;
+}
+
+.sobreMi p{
+	color: #f4f6ff;
+	font-size: 20px;
+	line-height: normal;
+	margin: 10px 0;
+	text-align: justify;
+	text-shadow: 2px 2px #393e46;
+}
+
+.footer{
+	background-color: #0f4c75;
+	height: 50px;
+}
+
+.footer p{
+	color: white;
+	font-size: 20px;
+	font-family: helvetica;
+	text-align: center;
 }
